wrote the css for our character's website and changed the and changed some HTML

--- a/css/hero.css
+++ b/css/hero.css
@@ -1,6 +1,8 @@
 body{
 	margin: 0;
 	font-family: Helvetica, Arial, sans-serif;
+	font-size: 20px;
+	line-height: 30px;
 }
 
 header{
@@ -23,11 +25,61 @@ header h1{
 	
 }
 
-
-
-
 header img{
 	border-radius: 170px;
     width: 350px;
-    border: 20px solid white;
+    border: 7px solid white;
+}
+
+main{
+	max-width: 800px;
+	margin: 0 auto;
+	padding: 20px;
+}
+
+main img{
+	max-width: 100%;
+}
+
+h2{
+	font-size: 30px;
+	color: #447BBE;
+	margin: 40px 0 10px;
+}
+
+a{
+	color: #447BBE;
+
+}
+a:hover{
+	color: white;
+	background-color: #DF1F2D;
+}
+
+footer{
+	background-color: #410101;
+	text-align: center;
+	color: white;
+	padding: 50px;
+}
+
+footer p{
+	margin: 0;
+}
+
+
+footer a{
+	color: white;
+}
+
+footer a:hover{
+	opacity: .5;
+	background-color: transparent;
+}
+
+p.caption{
+	color: #999999;
+	font-style: italic;
+	margin: 0;
+}
 
