--- a/css/hero.css
+++ b/css/hero.css
@@ -16,6 +16,9 @@ header{
 h1,h2{
 	font-family: 'Orbitron', sans-serif;
 
+/* header styles */
+/* all of the header, footer, and paragraph information */
+
 }
 
 
