--- a/css/hero.css
+++ b/css/hero.css
@@ -1,12 +1,18 @@
 body{
-	margin: 0;
+	margin: auto;
 	font-family: Helvetica, Arial, sans-serif;
 	font-size: 20px;
 	line-height: 30px;
+	background-image: url(https://images.hdqwalls.com/download/spiderman-mask-minimalism-8k-m4-7680x4320.jpg);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	color: lavenderblush;
+	    text-shadow: 2px 2px black;
 }
 
 header{
-	background-color: #410101;
+	
 	text-align: center;
 	padding-top: 50px;
 	padding-bottom: 50px;
@@ -25,29 +31,33 @@ h1,h2{
 header h1{
 	color: white;
 	font-size: 50px;
+	text-shadow: 4px 4px black;
 	
 }
 
 header img{
 	border-radius: 170px;
     width: 350px;
-    border: 7px solid white;
+    box-shadow: 10px 10px #ae3d2f;
 }
 
 main{
 	max-width: 800px;
 	margin: 0 auto;
 	padding: 20px;
+
 }
 
 main img{
 	max-width: 100%;
+	border: 5px solid black;
 }
 
 h2{
 	font-size: 30px;
-	color: #447BBE;
+	color: white;
 	margin: 40px 0 10px;
+	text-shadow: 5px 5px black;
 }
 
 a{
@@ -60,7 +70,10 @@ a:hover{
 }
 
 footer{
-	background-color: #410101;
+	background-image: url(https://get.clt.re/wp-content/uploads/2014/12/footer-background-01-noise.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
 	text-align: center;
 	color: white;
 	padding: 50px;
@@ -84,5 +97,6 @@ p.caption{
 	color: #999999;
 	font-style: italic;
 	margin: 0;
+	text-shadow: 2px 2px black;
 }
 
